<?xml version="1.0" encoding="utf-8"?>
<com.esharp.sdk.widget.MyNestedScrollView2 android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spsdk_dp_5"
    android:fadingEdge="none"
    android:fadingEdgeLength="0dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!--基本信息-->
        <TextView
            style="@style/spsdk_text_main16"
            android:text="@string/essential_information"
            />

        <View
            style="@style/spsdk_divide_line_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spsdk_dp_10"
            android:orientation="vertical">

            <com.esharp.sdk.widget.SPShowTextView
                android:id="@+id/stv_job_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spsdk_show_text_title="@string/job_number"
                app:spsdk_show_text_detail=""
                />

            <com.esharp.sdk.widget.SPShowTextView
                android:id="@+id/stv_job_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spsdk_show_text_title="@string/job_name"
                app:spsdk_show_text_detail=""
                />

            <com.esharp.sdk.widget.SPShowTextView
                android:id="@+id/stv_job_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spsdk_dp_25"
                app:spsdk_show_text_title="@string/job_type"
                app:spsdk_show_text_detail=""
                />

        </LinearLayout>

        <!--资产信息-->
        <TextView
            style="@style/spsdk_text_main16"
            android:text="@string/asset_information"
            />

        <View
            style="@style/spsdk_divide_line_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spsdk_dp_10"
            android:orientation="vertical">

            <com.esharp.sdk.widget.SPShowTextView
                android:id="@+id/stv_asset_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spsdk_show_text_title="@string/asset_name"
                app:spsdk_show_text_detail=""
                />

            <com.esharp.sdk.widget.SPShowTextView
                android:id="@+id/stv_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spsdk_dp_25"
                app:spsdk_show_text_title="@string/location"
                app:spsdk_show_text_detail=""
                />

        </LinearLayout>

        <!--执行信息-->
        <TextView
            style="@style/spsdk_text_main16"
            android:text="@string/execution_information"
            />

        <View
            style="@style/spsdk_divide_line_horizontal"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spsdk_dp_10"
            android:layout_marginTop="@dimen/spsdk_dp_10"
            android:layout_marginEnd="@dimen/spsdk_dp_10"
            android:layout_marginBottom="@dimen/spsdk_dp_10"
            app:cardCornerRadius="@dimen/spsdk_dp_5"
            app:cardElevation="@dimen/spsdk_dp_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spsdk_dp_10"
                android:orientation="vertical">

                <com.esharp.sdk.widget.SPShowTextView
                    android:id="@+id/stv_originator"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spsdk_dp_25"
                    app:spsdk_show_text_title="@string/originator"
                    app:spsdk_show_text_detail=""
                    />

                <com.esharp.sdk.widget.SPShowTextView
                    android:id="@+id/stv_time_of_initiation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spsdk_dp_25"
                    app:spsdk_show_text_title="@string/time_of_initiation"
                    app:spsdk_show_text_detail=""
                    />

                <com.esharp.sdk.widget.SPShowTextView
                    android:id="@+id/stv_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:spsdk_show_text_title="@string/remark"
                    app:spsdk_show_text_detail=""
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_handler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <com.esharp.sdk.widget.MyTextView
            android:id="@+id/mv_handle"
            android:layout_width="@dimen/spsdk_dp_100"
            android:layout_height="@dimen/spsdk_dp_40"
            android:layout_margin="@dimen/spsdk_dp_10"
            android:layout_gravity="center_horizontal"
            android:text="@string/handle"
            android:textSize="@dimen/spsdk_ts_16"
            android:textColor="@color/spsdk_color_white"
            android:gravity="center"
            app:stv_corner="@dimen/spsdk_dp_20"
            app:stv_solid="@color/spsdk_color_blue" />

    </LinearLayout>

</com.esharp.sdk.widget.MyNestedScrollView2>


