<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/spsdk_dp_30"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/job_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/spsdk_dp_30"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/job_type"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/spsdk_dp_30"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/completion_time"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/spsdk_dp_30"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/completed_by"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

</LinearLayout>