<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/spsdk_dp_50"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_describe"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/alert_describe"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/alert_type"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_occurrence_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/occurrence_time"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_related_assets"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/asset_name"
        android:textColor="@color/black"
        />

</LinearLayout>